tests/summary_py3/summary_11.txt
./data/example_11.rst:11:13: E999 SyntaxError: invalid syntax
   In [10]: %timeit a = (1, 2,name)  # noqa: F821
            ^
./data/example_11.rst:11:30: E231 missing whitespace after ','
   In [10]: %timeit a = (1, 2,name)  # noqa: F821
                             ^
./data/example_11.rst:16:16: E111 indentation is not a multiple of four
      ....:    print(a[i] is b[i])
               ^
./data/example_11.rst:17:12: W391 blank line at end of file
      ....:
           ^
